@@ -48,8 +48,16 @@
     <java.version>11</java.version>
     <jacoco.version>0.8.2</jacoco.version>
     <javadoc.version>3.0.1</javadoc.version>
-    <asciidoclet.version>1.5.6</asciidoclet.version>
+    <asciidoclet.version>2.0.0</asciidoclet.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <!-- Required for the asciidoclet fork. -->
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
 
   <build>
     <plugins>
@@ -220,15 +228,17 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>${javadoc.version}</version>
         <configuration>
-          <doclet>org.asciidoctor.Asciidoclet</doclet>
+          <additionalJOptions>
+            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+            <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
+          </additionalJOptions>
+          <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
           <docletArtifact>
-            <groupId>org.asciidoctor</groupId>
+            <groupId>com.github.chrisvest</groupId>
             <artifactId>asciidoclet</artifactId>
             <version>${asciidoclet.version}</version>
           </docletArtifact>
           <additionalOptions>--base-dir ${basedir}</additionalOptions>
-          <useStandardDocletOptions>false</useStandardDocletOptions>
-          <doclint>none</doclint>
         </configuration>
       </plugin>
       <plugin>
@@ -299,9 +309,13 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>${javadoc.version}</version>
         <configuration>
-          <doclet>org.asciidoctor.Asciidoclet</doclet>
+          <additionalJOptions>
+            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+            <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
+          </additionalJOptions>
+          <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
           <docletArtifact>
-            <groupId>org.asciidoctor</groupId>
+            <groupId>com.github.chrisvest</groupId>
             <artifactId>asciidoclet</artifactId>
             <version>${asciidoclet.version}</version>
           </docletArtifact>
